--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Método Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
+            <h3 class="my-4"><b>6 Ingredients Que Vão Fazer seu Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
 
             <!-- VSL -->
             <script type="text/javascript" id="scr_6283b1b406aa090009246f53">var s=document.createElement("script");s.src="https://scripts.converteai.net/499d2113-db0c-4d6a-8bc3-f650751e440a/players/6283b1b406aa090009246f53/player.js",s.async=!0,document.head.appendChild(s);</script>
@@ -152,7 +152,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Esse vídeo mudou minha vida, já são 20 kilos a menos em 4 meses ,agradecida</td>
+                      <td class="fb-comments-comment-text">Esse vídeo mudou minha vida, já são 20 kilos a menos em 4 meses ,Muito agradecida</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -301,7 +301,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td class="fb-comments-comment-text">Maravilhosa melhor de todas fez 7dias tomando e 7 klos já conseguir eliminar tô muito feliz obrigado 😍😍😍</td>
+                        <td class="fb-comments-comment-text">Maravilhosa, melhor de todas, e em 11 dias tomando e 7kg já consegui eliminar tô muito feliz obrigado 😍😍😍</td>
                       </tr>
                       <tr>
                         <td class="fb-comments-comment-actions">
@@ -455,7 +455,7 @@
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1294000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1260000); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
